--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,10 @@
-body{
-    background-image: url("../images/bar.jpg")
+.background{
+    background-image: url("../images/bw.jpg");
+    background-size: cover; 
+}
+
+
+
+#header{
+    background-color: transparent !important;
 }
